--- a/sselData/sselData.csproj
+++ b/sselData/sselData.csproj
@@ -13,7 +13,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>sselData</RootNamespace>
     <AssemblyName>sselData</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -23,6 +23,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -45,17 +46,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Microsoft.Owin, Version=3.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Owin.3.1.0\lib\net45\Microsoft.Owin.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Microsoft.Owin, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.4.0.0\lib\net451\Microsoft.Owin.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Owin.Host.SystemWeb, Version=3.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Owin.Host.SystemWeb.3.1.0\lib\net45\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Microsoft.Owin.Host.SystemWeb, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.Host.SystemWeb.4.0.0\lib\net451\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
     </Reference>
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -86,8 +84,18 @@
     <Compile Include="Account.aspx.designer.cs">
       <DependentUpon>Account.aspx</DependentUpon>
     </Compile>
+    <Compile Include="ajax\addressmanager.ashx.cs">
+      <DependentUpon>addressmanager.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Controls\CreateAddressEventArgs.cs" />
     <Compile Include="Controls\EditAddressEventArgs.cs" />
+    <Compile Include="Organization.aspx.cs">
+      <DependentUpon>Organization.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Organization.aspx.designer.cs">
+      <DependentUpon>Organization.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Startup.cs" />
     <Content Include="Account.aspx" />
     <Content Include="ChargeType.aspx" />
@@ -105,10 +113,10 @@
     <Content Include="index.aspx" />
     <Content Include="Organization.aspx" />
     <Content Include="OrgType.aspx" />
+    <Content Include="scripts\address-manager.js" />
+    <Content Include="scripts\handlebars.min-latest.js" />
     <Content Include="scripts\jquery.uds.js" />
     <Content Include="scripts\sseldatautils.js" />
-    <Content Include="packages.config" />
-    <None Include="scripts\_references.js" />
     <Content Include="styles\address-manager.css" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -116,6 +124,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="data.master" />
+    <Content Include="ajax\addressmanager.ashx" />
+    <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="Properties\PublishProfiles\Production %28Apps%29.pubxml" />
     <None Include="Properties\PublishProfiles\Production.pubxml" />
@@ -174,13 +184,6 @@
     </Compile>
     <Compile Include="index.aspx.designer.cs">
       <DependentUpon>index.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Organization.aspx.cs">
-      <DependentUpon>Organization.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Organization.aspx.designer.cs">
-      <DependentUpon>Organization.aspx</DependentUpon>
     </Compile>
     <Compile Include="OrgType.aspx.cs">
       <DependentUpon>OrgType.aspx</DependentUpon>
