Fixed issue with drybox icon inccorectly dispalyed on Client.aspx. Also some updates for Visual Studio code cleanup suggestions.

--- a/sselData.AppCode/sselData.AppCode.csproj
+++ b/sselData.AppCode/sselData.AppCode.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlertInfo.cs" />
     <Compile Include="DAL\AccountTypeDA.cs" />
     <Compile Include="DAL\BillingTypeDA.cs" />
     <Compile Include="DAL\UserGroupDA.cs" />
